--- a/infrastructure/controllers/traefik/kustomization.yaml
+++ b/infrastructure/controllers/traefik/kustomization.yaml
@@ -1,7 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./cert-manager
-  - ./sealed-secrets
-  - ./metallb
-  - ./traefik
+  - namespace.yaml 
+  - repository.yaml 
+  - release.yaml 
