--- a/infrastructure/controllers/traefik/release.yaml
+++ b/infrastructure/controllers/traefik/release.yaml
@@ -7,7 +7,7 @@ spec:
   interval: 30m
   chart:
     spec:
-      chart: ingress-traefik 
+      chart: traefik 
       version: "36.x"
       sourceRef:
         kind: HelmRepository
