--- a/infrastructure/controllers/traefik/release.yaml
+++ b/infrastructure/controllers/traefik/release.yaml
@@ -14,3 +14,7 @@ spec:
         name: traefik 
         namespace: ingress-traefik 
       interval: 12h
+  values:
+    service:
+      spec:
+        loadBalancerIP: "192.168.1.150"
