--- a/infrastructure/configs/traefik/service.yaml
+++ b/infrastructure/configs/traefik/service.yaml
@@ -16,7 +16,7 @@ spec:
     protocol: TCP
     targetPort: 443
   selector:
-    app: traefik
+    app.kubernetes.io/name: traefik
   loadBalancerIP: 192.168.1.150
   allocateLoadBalancerNodePorts: false
   type: LoadBalancer
