--- a/infrastructure/configs/traefik/service.yaml
+++ b/infrastructure/configs/traefik/service.yaml
@@ -7,14 +7,14 @@ metadata:
   namespace: ingress-traefik
 spec:
   ports:
-  - name: dns
+  - name: http
     port: 80
     protocol: TCP
-    targetPort: 80
+    targetPort: 8000
   - name: https
     port: 443
     protocol: TCP
-    targetPort: 443
+    targetPort: 8443
   selector:
     app.kubernetes.io/name: traefik
   loadBalancerIP: 192.168.1.150
