--- a/clusters/my-cluster/infrastructure.yaml
+++ b/clusters/my-cluster/infrastructure.yaml
@@ -20,6 +20,8 @@ metadata:
   name: infra-configs
   namespace: flux-system
 spec:
+  dependsOn:
+    - name: infra-controllers
   interval: 1h
   retryInterval: 1m
   timeout: 5m
@@ -28,3 +30,11 @@ spec:
     name: flux-system 
   path: ./infrastructure/configs
   prune: true
+  patches:
+    - patch: |
+        - op: replace
+          path: /spec/acme/server
+          value: https://acme-v02.api.letsencrypt.org/directory
+      target:
+        kind: ClusterIssuer
+        name: cloudflare
