--- a/infrastructure/controllers/longhorn/release.yaml
+++ b/infrastructure/controllers/longhorn/release.yaml
@@ -12,5 +12,5 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: longhorn 
-        namespace: ingress-longhorn 
+        namespace: longhorn 
       interval: 12h
