[FEAT] Specify traefik ingress class name

--- a/infrastructure/controllers/traefik/release.yaml
+++ b/infrastructure/controllers/traefik/release.yaml
@@ -17,3 +17,7 @@ spec:
   values:
     service:
       enabled: false
+    ingressClass:
+      enabled: true
+      isDefaultClass: true
+      name: "traefik-local"
