--- a/infrastructure/configs/longhorn/ingress.yaml
+++ b/infrastructure/configs/longhorn/ingress.yaml
@@ -6,6 +6,7 @@ metadata:
   name: longhorn
   namespace: longhorn
 spec:
+  ingressClassName: traefik-local
   tls:
     - hosts:
       - longhorn.flux.techbabette.com
