--- a/apps/base/immich/release.yaml
+++ b/apps/base/immich/release.yaml
@@ -4,16 +4,11 @@ metadata:
   name: immich 
   namespace: immich 
 spec:
-  interval: 30m
-  chart:
-    spec:
-      chart: immich 
-      version: "0.9.3"
-      sourceRef:
-        kind: OCIRepository 
-        name: immich 
-        namespace: immich 
-      interval: 12h
+  chartRef:
+    kind: OCIRepository 
+    name: immich
+    namespace: immich 
+  interval: 10m
   values:
     postgresql.global.postgresql.auth.existingSecret: database-user
     immich.persistence.library.existingClaim: images
