--- a/apps/base/immich/repository.yaml
+++ b/apps/base/immich/repository.yaml
@@ -6,4 +6,5 @@ metadata:
 spec:
   interval: 24h
   url: oci://ghcr.io/immich-app/immich-charts/immich 
-  semver: "0.9.3"
+  ref:
+    semver: "~0.9.3"
