--- a/apps/base/immich/release.yaml
+++ b/apps/base/immich/release.yaml
@@ -10,6 +10,8 @@ spec:
     namespace: immich 
   interval: 10m
   values:
+    image:
+      tag: v1.135.0
     postgresql:
       global:
         postgresql:
