[FEAT] Enable gateway api support in traefik release

--- a/infrastructure/controllers/traefik/release.yaml
+++ b/infrastructure/controllers/traefik/release.yaml
@@ -17,6 +17,9 @@ spec:
   values:
     service:
       enabled: false
+    experimental:
+      kubernetesGateway:
+        enabled: true
     ingressClass:
       enabled: true
       isDefaultClass: true
