--- a/infrastructure/controllers/traefik/release.yaml
+++ b/infrastructure/controllers/traefik/release.yaml
@@ -20,6 +20,9 @@ spec:
     experimental:
       kubernetesGateway:
         enabled: true
+    gateway:
+      enabled: true
+      annotations: ["cert-manager.io/issuer: cloudflare"]
     ingressClass:
       enabled: true
       isDefaultClass: true
