[FIX] Format gateway annotations array correctly

--- a/infrastructure/controllers/traefik/release.yaml
+++ b/infrastructure/controllers/traefik/release.yaml
@@ -22,7 +22,9 @@ spec:
         enabled: true
     gateway:
       enabled: true
-      annotations: ["cert-manager.io/issuer: cloudflare"]
+      annotations: [{
+          "cert-manager.io/issuer": "cloudflare"
+        }]
     ingressClass:
       enabled: true
       isDefaultClass: true
