--- a/infrastructure/controllers/traefik/release.yaml
+++ b/infrastructure/controllers/traefik/release.yaml
@@ -22,9 +22,9 @@ spec:
         enabled: true
     gateway:
       enabled: true
-      annotations: [{
+      annotations: {
           "cert-manager.io/issuer": "cloudflare"
-        }]
+        }
     ingressClass:
       enabled: true
       isDefaultClass: true
