[FIX] Enable gateway api in providers section of traefik release

--- a/infrastructure/controllers/traefik/release.yaml
+++ b/infrastructure/controllers/traefik/release.yaml
@@ -20,6 +20,8 @@ spec:
     experimental:
       kubernetesGateway:
         enabled: true
+    providers:
+      kubernetesGateway: enabled
     gateway:
       enabled: true
       annotations: {
