--- a/infrastructure/controllers/traefik/release.yaml
+++ b/infrastructure/controllers/traefik/release.yaml
@@ -18,12 +18,15 @@ spec:
     service:
       enabled: false
     providers:
-      kubernetesGateway: enabled
+      kubernetesGateway: 
+        enabled: true
     gateway:
       enabled: true
       annotations: {
           "cert-manager.io/issuer": "cloudflare"
         }
+    gatewayClass:
+      enabled: true 
     ingressClass:
       enabled: true
       isDefaultClass: true
