[FIX] Explicitly disable default gateway creation in traefik release

--- a/infrastructure/controllers/traefik/release.yaml
+++ b/infrastructure/controllers/traefik/release.yaml
@@ -20,6 +20,8 @@ spec:
     providers:
       kubernetesGateway:
         enabled: true
+    gateway:
+      enabled: false 
     gatewayClass:
       enabled: true 
     ingressClass:
