--- a/infrastructure/configs/traefik/gateway.yaml
+++ b/infrastructure/configs/traefik/gateway.yaml
@@ -2,7 +2,7 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: Gateway
 metadata:
   annotations:
-    cert-manager.io/issuer: cloudflare
+    cert-manager.io/cluster-issuer: cloudflare
   name: traefik-gateway
   namespace: ingress-traefik
 spec:
